update sync progress display

--- a/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysync.html
@@ -10,13 +10,13 @@
 
             <div class="supporterPromotionContainer" style="display:none;text-align: right;">
                 <div class="customSupporterPromotion supporterPromotion inlineSupporterPromotion">
-                    <a class="btn btnActionAccent" href="http://emby.media/premiere" target="_blank" style="font-size:14px;">
+                    <paper-button raised class="accent block btnSyncSupporter">
                         <div class="mainText">
                         </div>
-                        <div class="btnLearnMore" style="font-weight:normal;font-size:90%;margin-top:5px;">
+                        <div class="btnLearnMore" style="font-weight: normal; font-size: 90%; margin-top: 5px;">
                             ${ButtonLearnMore}
                         </div>
-                    </a>
+                    </paper-button>
                 </div>
             </div>
             <div class="ehsContent" style="clear:both;">
