hide library monitor from certain operating systems

--- a/MediaBrowser.WebDashboard/dashboard-ui/librarysettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/librarysettings.html
@@ -55,7 +55,7 @@
                     </div>
                     <br />
                     <ul data-role="listview" class="ulForm">
-                        <li>
+                        <li class="fldLibraryMonitor hide">
                             <label for="selectEnableRealtimeMonitor">${LabelEnableRealtimeMonitor}</label>
                             <select id="selectEnableRealtimeMonitor" data-mini="true">
                                 <option value="Auto">${OptionAuto}</option>
