--- a/MediaBrowser.WebDashboard/dashboard-ui/tv.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tv.html
@@ -14,7 +14,6 @@
                 <paper-tab>${TabShows}</paper-tab>
                 <paper-tab class="tvEpisodesTab">${TabEpisodes}</paper-tab>
                 <paper-tab>${TabGenres}</paper-tab>
-                <paper-tab class="tvPeopleTab">${TabPeople}</paper-tab>
                 <paper-tab class="tvStudiosTab">${TabNetworks}</paper-tab>
             </paper-tabs>
             <div class="legacyTabs scopedLibraryViewNav">
@@ -24,8 +23,7 @@
                 <a href="tv.html?tab=3">${TabShows}</a>
                 <a href="tv.html?tab=4" class="tvEpisodesTab">${TabEpisodes}</a>
                 <a href="tv.html?tab=5">${TabGenres}</a>
-                <a href="tv.html?tab=6" class="tvPeopleTab">${TabPeople}</a>
-                <a href="tv.html?tab=7" class="tvStudiosTab">${TabNetworks}</a>
+                <a href="tv.html?tab=6" class="tvStudiosTab">${TabNetworks}</a>
             </div>
         </div>
 
@@ -35,7 +33,7 @@
                     <div class="pageTabContent" data-index="0">
                         <div id="resumableSection" style="display: none;" class="scopedContent homePageSection">
                             <div>
-                                <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
+                                <h1 class="listHeader" style="display: inline-block; vertical-align: middle;">${HeaderResume}</h1>
                                 <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
 
@@ -45,7 +43,7 @@
 
                         <div class="homePageSection">
                             <div>
-                                <h1 class="listHeader nextUpHeader" style="display:inline-block;vertical-align:middle;">${HeaderNextUp}</h1>
+                                <h1 class="listHeader nextUpHeader" style="display: inline-block; vertical-align: middle;">${HeaderNextUp}</h1>
                                 <paper-button raised class="submit mini categorySyncButton" data-category="NextUp"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
                             <div id="nextUpItems" class="itemsContainer">
@@ -58,7 +56,7 @@
                     <div class="pageTabContent" data-index="1">
                         <div class="homePageSection">
                             <div>
-                                <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestEpisodes}</h1>
+                                <h1 class="listHeader" style="display: inline-block; vertical-align: middle;">${HeaderLatestEpisodes}</h1>
                                 <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="sync"></iron-icon><span>${ButtonSync}</span></paper-button>
                             </div>
                             <div id="latestEpisodes" class="itemsContainer">
@@ -72,7 +70,9 @@
                         </div>
                         <div class="noItemsMessage" style="display: none;">
                             <p>${MessageNothingHere}</p>
-                            <p><a href="metadata.html">${MessagePleaseEnsureInternetMetadata}</a></p>
+                            <p>
+                                <a href="metadata.html">${MessagePleaseEnsureInternetMetadata}</a>
+                            </p>
                         </div>
                     </div>
                 </neon-animatable>
@@ -84,7 +84,7 @@
                             <div class="listTopPaging">
                             </div>
                         </div>
-                        <div id="items" class="itemsContainer paddedItemsContainer" style="text-align:center;"></div>
+                        <div id="items" class="itemsContainer paddedItemsContainer" style="text-align: center;"></div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
@@ -107,22 +107,11 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent" data-index="6">
-                        <div class="alphabetPicker">
-                        </div>
                         <div class="viewSettings">
                             <div class="listTopPaging">
                             </div>
                         </div>
-                        <div class="itemsContainer"></div>
-                    </div>
-                </neon-animatable>
-                <neon-animatable>
-                    <div class="pageTabContent" data-index="7">
-                        <div class="viewSettings">
-                            <div class="listTopPaging">
-                            </div>
-                        </div>
-                        <div id="items" class="itemsContainer paddedItemsContainer" style="text-align:center;"></div>
+                        <div id="items" class="itemsContainer paddedItemsContainer" style="text-align: center;"></div>
                     </div>
                 </neon-animatable>
             </neon-animated-pages>
@@ -258,36 +247,6 @@
             </form>
         </div>
 
-        <div data-role="panel" class="viewPanel peopleViewPanel hide" data-theme="b" data-position="right" data-display="overlay" data-position-fixed="true">
-            <div class="ui-panel-inner">
-                <form>
-
-                    <div>
-                        <h1>
-                            ${HeaderFilters}
-                        </h1>
-                        <div class="paperCheckboxList">
-                            <paper-checkbox class="chkStandardFilter" data-filter="IsFavorite">${OptionFavorite}</paper-checkbox>
-                            <paper-checkbox class="chkStandardFilter" data-filter="Likes">${OptionLikes}</paper-checkbox>
-                            <paper-checkbox class="chkStandardFilter" data-filter="Dislikes">${OptionDislikes}</paper-checkbox>
-                        </div>
-                    </div>
-                    <div>
-                        <h1>
-                            ${HeaderPersonTypes}
-                        </h1>
-
-                        <div class="paperCheckboxList">
-                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Actor">${OptionActors}</paper-checkbox>
-                            <paper-checkbox class="chkPersonTypeFilter" data-filter="GuestStar">${OptionGuestStars}</paper-checkbox>
-                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Director">${OptionDirectors}</paper-checkbox>
-                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Producer">${OptionProducers}</paper-checkbox>
-                            <paper-checkbox class="chkPersonTypeFilter" data-filter="Writer">${OptionWriters}</paper-checkbox>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
         <div data-role="content">
         </div>
     </div>
