--- a/MediaBrowser.WebDashboard/dashboard-ui/tvproviders/schedulesdirect.template.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvproviders/schedulesdirect.template.html
@@ -28,34 +28,36 @@
 <br />
 <br />
 <br />
-<div style="font-size:16px;">
-    <div style="display:inline-block;background-color:rgba(82,181,75,.8);color:#fff;padding:2px 10px;font-size:20px;border-radius:1000px;vertical-align:middle;">
-        2
+<div class="listingsSection hide">
+    <div style="font-size:16px;">
+        <div style="display:inline-block;background-color:rgba(82,181,75,.8);color:#fff;padding:2px 10px;font-size:20px;border-radius:1000px;vertical-align:middle;">
+            2
+        </div>
+        <div style="display:inline-block;vertical-align:middle;margin-left:5px;">
+            ${GuideProviderSelectListings}
+        </div>
     </div>
-    <div style="display:inline-block;vertical-align:middle;margin-left:5px;">
-        ${GuideProviderSelectListings}
-    </div>
+    <form class="formListings">
+        <div>
+            <div>
+                <br />
+                <label for="selectCountry">${LabelCountry}</label>
+                <select id="selectCountry" data-mini="true" required="required"></select>
+            </div>
+            <div>
+                <paper-input class="txtZipCode" label="${LabelZipCode}" required="required"></paper-input>
+            </div>
+            <div>
+                <br />
+                <label for="selectListing">${LabelLineup}</label>
+                <select id="selectListing" data-mini="true" required="required"></select>
+            </div>
+            <div>
+                <button type="submit" data-role="none" class="clearButton btnSubmitListingsContainer">
+                    <paper-button raised class="submit block btnSubmitListings hide"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
+                </button>
+                <paper-button raised class="cancel block btnCancel hide" onclick="history.back();"><iron-icon icon="close"></iron-icon><span>${ButtonCancel}</span></paper-button>
+            </div>
+        </div>
+    </form>
 </div>
-<form class="formListings">
-    <div>
-        <div>
-            <br />
-            <label for="selectCountry">${LabelCountry}</label>
-            <select id="selectCountry" data-mini="true" required="required"></select>
-        </div>
-        <div>
-            <paper-input class="txtZipCode" label="${LabelZipCode}" required="required"></paper-input>
-        </div>
-        <div>
-            <br />
-            <label for="selectListing">${LabelLineup}</label>
-            <select id="selectListing" data-mini="true" required="required"></select>
-        </div>
-        <div>
-            <button type="submit" data-role="none" class="clearButton btnSubmitListingsContainer">
-                <paper-button raised class="submit block btnSubmitListings hide"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
-            </button>
-            <paper-button raised class="cancel block btnCancel hide" onclick="history.back();"><iron-icon icon="close"></iron-icon><span>${ButtonCancel}</span></paper-button>
-        </div>
-    </div>
-</form>
