fix missing file

--- a/MediaBrowser.WebDashboard/dashboard-ui/autoorganizelog.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/autoorganizelog.html
@@ -19,8 +19,8 @@
                     </div>
 
                     <div style="float: right; position: relative; top: 15px;margin-top: -5px;display:none;" class="organizeTaskPanel">
-                        <button style="display: none;" class="btnClearLog" type="button" data-inline="true" data-icon="forbidden" data-mini="true">Clear</button>
-                        <button type="button" class="btnOrganize" data-icon="action" data-mini="true" data-inline="true">${ButtonOrganize}</button>
+                        <paper-button type="button" class="btnClearLog" raised><iron-icon icon="clear-all"></iron-icon><span>${ButtonClear}</span></paper-button>
+                        <paper-button type="button" class="btnOrganize" raised><iron-icon icon="check"></iron-icon><span>${ButtonOrganize}</span></paper-button>
                         <progress max="100" min="0" style="width:100px;display:none;" class="organizeProgress"></progress>
                     </div>
                     <br />
