update playlist drag and drop

--- a/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/edititemmetadata.html
@@ -25,9 +25,9 @@
                                 </button>
                             </paper-button>
 
-                            <paper-button raised class="subdued btnRefresh btnSimpleRefresh" style="background-color:#673AB7;"><iron-icon icon="refresh"></iron-icon><span>${ButtonRefresh}</span></paper-button>
-                            <paper-button id="btnIdentify" raised style="background-color:#009688;"><iron-icon icon="info"></iron-icon><span>${ButtonIdentify}</span></paper-button>
-                            <paper-button raised class="subdued notext btnMore"><iron-icon icon="more-vert"></iron-icon></paper-button>
+                            <paper-button raised class="subdued btnEditImages"><iron-icon icon="photo"></iron-icon><span>${ButtonEditImages}</span></paper-button>
+                            <paper-button raised class="subdued btnRefresh btnSimpleRefresh"><iron-icon icon="refresh"></iron-icon><span>${ButtonRefresh}</span></paper-button>
+                            <paper-button id="btnIdentify" raised class="subdued"><iron-icon icon="info"></iron-icon><span>${ButtonIdentify}</span></paper-button>
                         </div>
 
                         <div style="padding: 0 0 10px;">
