--- a/MediaBrowser.WebDashboard/dashboard-ui/library.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/library.html
@@ -13,16 +13,13 @@
                     <a href="librarypathmapping.html" data-role="button">${TabPathSubstitution}</a>
                     <a href="librarysettings.html" data-role="button">${TabAdvanced}</a>
                 </div>
-                <div id="divVirtualFolders"></div>
 
-                <br />
-                <div>
-                    <paper-button raised class="btnRefresh block submit"><iron-icon icon="refresh"></iron-icon><span>${ButtonScanLibrary}</span></paper-button>
-                    <div style="margin:5px;">
-                        <progress max="100" min="0" style="width: 100%;" class="refreshProgress"></progress>
-                        <div style="margin-top: 5px;">${LabelLastResult} <span class="lastRefreshResult"></span></div>
-                    </div>
+                <div style="text-align: right;">
+
+                    <paper-button raised class="btnRefresh"><iron-icon icon="refresh"></iron-icon><span>${ButtonScanLibrary}</span></paper-button>
+                    <progress max="100" min="0" style="display: inline-block; vertical-align: middle;" class="refreshProgress"></progress>
                 </div>
+                <div id="divVirtualFolders"></div>
 
             </div>
         </div>
