--- a/MediaBrowser.WebDashboard/dashboard-ui/library.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/library.html
@@ -14,13 +14,13 @@
                     <a href="librarysettings.html" data-role="button">${TabAdvanced}</a>
                 </div>
 
-                <div style="text-align: right;">
+                <div id="divVirtualFolders"></div>
+                <br />
+                <div>
 
                     <paper-button raised class="btnRefresh"><iron-icon icon="refresh"></iron-icon><span>${ButtonScanLibrary}</span></paper-button>
                     <progress max="100" min="0" style="display: inline-block; vertical-align: middle;" class="refreshProgress"></progress>
                 </div>
-                <div id="divVirtualFolders"></div>
-
             </div>
         </div>
     </div>
