--- a/MediaBrowser.WebDashboard/dashboard-ui/userparentalcontrol.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/userparentalcontrol.html
@@ -32,8 +32,11 @@
 
                     <div>
                         <div>
-                            <div class="ui-controlgroup-label" style="display:inline-block;">${LabelBlockContentWithTags}</div>
-                            <paper-fab class="btnAddBlockedTag mini" icon="add" title="${ButtonAdd}" style="margin-left:1em;"></paper-fab>
+                            <h1 style="display:inline-block;vertical-align:middle;">${LabelBlockContentWithTags}</h1>
+                            <paper-button raised class="btnAddBlockedTag submit mini" style="margin-left:1em;" title="${ButtonAdd}">
+                                <iron-icon icon="add"></iron-icon>
+                                <span>${ButtonAdd}</span>
+                            </paper-button>
                         </div>
                         <div class="blockedTags" style="margin-top:.5em;">
 
@@ -61,8 +64,6 @@
                             <button type="submit" data-role="none" class="clearButton">
                                 <paper-button raised class="submit block"><iron-icon icon="check"></iron-icon><span>${ButtonSave}</span></paper-button>
                             </button>
-
-                            <paper-button raised class="cancel block btnCancel" onclick="history.back();"><iron-icon icon="close"></iron-icon><span>${ButtonCancel}</span></paper-button>
                         </li>
                     </ul>
 
