--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -195,8 +195,8 @@
                 <div class="detailSection audioVideoMediaInfo hide">
                     <h1>${HeaderMediaInfo}</h1>
                     <div>
-                        <div class="splitVersionContainer" style="border-bottom: 1px solid #444;">
-                            <button type="button" class="btnSplitVersions" data-mini="true" data-inline="true" data-icon="delete" title="${ButtonSplitVersionsApart}">${ButtonSplitVersionsApart}</button>
+                        <div class="splitVersionContainer" style="border-bottom: 1px solid #444;padding:1em 0;">
+                            <paper-button raised class="btnSplitVersions subdued">${ButtonSplitVersionsApart}</paper-button>
                         </div>
                         <div id="mediaInfoContent" class="mediaInfoContent"></div>
                     </div>
