--- a/MediaBrowser.WebDashboard/dashboard-ui/librarypathmapping.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/librarypathmapping.html
@@ -4,7 +4,7 @@
     <title>${TitleMediaLibrary}</title>
 </head>
 <body>
-    <div id="libraryPathMappingPage" data-role="page" class="page type-interior mediaLibraryPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Library%20setup" data-require="jqmtable,scripts/librarypathmapping">
+    <div id="libraryPathMappingPage" data-role="page" class="page type-interior librarySectionPage" data-helpurl="https://github.com/MediaBrowser/Wiki/wiki/Library%20setup" data-require="jqmtable,scripts/librarypathmapping">
 
         <div data-role="content">
             <div class="content-primary">
