fix list avatars

--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -145,7 +145,7 @@
                         <p id="awardSummary"></p>
                         <div class="paperList" id="criticRatingSummary">
                             <paper-icon-item>
-                                <paper-fab class="listAvatar" style="background-color: transparent; background-repeat: no-repeat; background-position: center center; background-size: cover; background-image: url(css/images/fresh.png);" item-icon></paper-fab>
+                                <paper-fab mini style="background-color: transparent; background-repeat: no-repeat; background-position: center center; background-size: cover; background-image: url(css/images/fresh.png);" item-icon></paper-fab>
                                 <paper-item-body three-line>
                                     <div>TOMATOMETER®</div>
                                     <div class="criticRatingScore"></div>
