--- a/MediaBrowser.WebDashboard/dashboard-ui/music.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/music.html
@@ -32,28 +32,28 @@
                         <div class="homePageSection">
                             <h1 class="listHeader">${HeaderLatestMusic}</h1>
 
-                            <div id="recentlyAddedSongs" class="itemsContainer fullWidthItemsContainer noautoinit" style="text-align:left;">
+                            <div id="recentlyAddedSongs" class="itemsContainer noautoinit" style="text-align:left;">
                             </div>
                         </div>
 
                         <div id="playlists" style="display: none;" class="homePageSection">
                             <h1 class="listHeader">${HeaderPlaylists}</h1>
 
-                            <div class="itemsContainer fullWidthItemsContainer noautoinit" style="text-align:left;">
+                            <div class="itemsContainer noautoinit" style="text-align:left;">
                             </div>
                         </div>
 
                         <div id="recentlyPlayed" style="display: none;" class="homePageSection">
                             <h1 class="listHeader">${HeaderRecentlyPlayed}</h1>
 
-                            <div id="recentlyPlayedSongs" class="itemsContainer fullWidthItemsContainer noautoinit" style="text-align:left;">
+                            <div id="recentlyPlayedSongs" class="itemsContainer noautoinit" style="text-align:left;">
                             </div>
                         </div>
 
                         <div id="topPlayed" style="display: none;" class="homePageSection">
                             <h1 class="listHeader">${HeaderFrequentlyPlayed}</h1>
 
-                            <div id="topPlayedSongs" class="itemsContainer fullWidthItemsContainer noautoinit" style="text-align:left;">
+                            <div id="topPlayedSongs" class="itemsContainer noautoinit" style="text-align:left;">
                             </div>
                         </div>
                     </div>
