--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -96,7 +96,7 @@
                         <span id="childrenTitle"></span>
                     </h1>
                     <div id="childrenContent">
-                        <div class="childrenItemsContainer itemsContainer fullWidthItemsContainer" style="text-align:left;"></div>
+                        <div class="childrenItemsContainer itemsContainer noautoinit" style="text-align:left;"></div>
                     </div>
                 </div>
                 <div id="additionalPartsCollapsible" class="detailSection hide">
