make sure ._ osx files are properly ignored

--- a/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/encodingsettings.html
@@ -61,7 +61,7 @@
                             <input type="number" id="txtDownMixAudioBoost" pattern="[0-9]*" required="required" min=".5" max="3" step=".1" />
                             <div class="fieldDescription">${LabelDownMixAudioScaleHelp}</div>
                         </li>
-                        <li>
+                        <li style="display:none;">
                             <input type="checkbox" id="chkEnableDebugEncodingLogging" name="chkEnableDebugEncodingLogging" data-mini="true" />
                             <label for="chkEnableDebugEncodingLogging">${OptionEnableDebugTranscodingLogging}</label>
                             <div class="fieldDescription">${OptionEnableDebugTranscodingLoggingHelp}</div>
