show more music favorites

--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -50,7 +50,7 @@
                 </neon-animatable>
                 <neon-animatable>
                     <div class="pageTabContent homeFavoritesTabContent" data-index="2">
-                        <div class="sections"></div>
+                        <div class="favoriteSections"></div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
