--- a/MediaBrowser.WebDashboard/dashboard-ui/music.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/music.html
@@ -53,9 +53,11 @@
                         <div id="topPlayed" style="display: none;" class="homePageSection">
                             <h1 class="listHeader">${HeaderFrequentlyPlayed}</h1>
 
-                            <div id="topPlayedSongs" class="itemsContainer noautoinit" style="text-align:left;">
+                            <div id="topPlayedSongs" class="itemsContainer noautoinit" style="text-align: left;">
                             </div>
                         </div>
+
+                        <div class="favoriteSections homePageSection"></div>
                     </div>
                 </neon-animatable>
                 <neon-animatable>
